--- a/app/src/main/res/layout/activity_manage_results.xml
+++ b/app/src/main/res/layout/activity_manage_results.xml
@@ -156,10 +156,10 @@
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/editTextResult"
+                        android:id="@+id/editTextMarks"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/assessment"
+                        android:hint="Marks /100"
                         android:inputType="numberDecimal"/>
 
                 </com.google.android.material.textfield.TextInputLayout>
