--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:fitsSystemWindows="true"
     tools:context=".admin.MainActivity">
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
     <!-- Main Content -->
     <RelativeLayout
         android:layout_width="match_parent"
@@ -204,34 +210,17 @@
                 />
 
     </RelativeLayout>
-
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
     <!-- Navigation Drawer -->
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+        android:layout_gravity="start"
+        style="@style/Widget.Design.NavigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/admin_dashboard"
-                android:textSize="20sp"
-                android:textColor="@color/colorPrimary"
-                android:padding="16dp"/>
-
-            <com.google.android.material.navigation.NavigationView
-                android:id="@+id/nav_sub_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-        </LinearLayout>
+        android:id="@+id/navigationView"
+        app:headerLayout="@layout/header_navigation_drawer"
+        app:menu="@menu/side_nav"
+        >
 
     </com.google.android.material.navigation.NavigationView>
 
