--- a/app/src/main/res/layout/activity_student_report.xml
+++ b/app/src/main/res/layout/activity_student_report.xml
@@ -82,7 +82,12 @@
                     android:padding="10dp"/>
 
             </com.google.android.material.textfield.TextInputLayout>
-
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_view_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:shimmer_auto_start="true"
+                app:shimmer_duration="1000"/>
 
             <!-- RecyclerView for displaying students -->
             <androidx.recyclerview.widget.RecyclerView
