--- a/app/src/main/res/layout/activity_teacher_dashboard.xml
+++ b/app/src/main/res/layout/activity_teacher_dashboard.xml
@@ -178,34 +178,16 @@
             />
 
     </RelativeLayout>
-
     <!-- Navigation Drawer -->
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/navigationView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/admin_dashboard"
-                android:textSize="20sp"
-                android:textColor="@color/colorPrimary"
-                android:padding="16dp"/>
-
-            <com.google.android.material.navigation.NavigationView
-                android:id="@+id/nav_sub_view"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-        </LinearLayout>
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/header_navigation_drawer"
+        app:menu="@menu/side_nav"
+        >
 
     </com.google.android.material.navigation.NavigationView>
 
