--- a/app/src/main/res/layout/student_item.xml
+++ b/app/src/main/res/layout/student_item.xml
@@ -1,23 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_margin="5dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="5dp"
+    >
 
-    <TextView
-        android:id="@+id/textViewName"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"/>
+        android:layout_margin="5dp"
 
-    <TextView
-        android:id="@+id/textViewClass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@android:color/black"/>
+        >
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/textViewName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text="@string/app_name"
+                android:textColor="@android:color/black"/>
+
+        <TextView
+            android:layout_below="@id/textViewName"
+            android:id="@+id/txt_std_class"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="Class: "
+            android:textColor="@android:color/black"/>
+
+            <TextView
+                android:layout_toEndOf="@id/txt_std_class"
+                android:layout_below="@id/textViewName"
+                android:id="@+id/textViewClass"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textSize="16sp"
+                android:text="@string/senior_one"
+                android:textColor="@android:color/black"/>
+        <TextView
+            android:layout_below="@id/textViewClass"
+            android:id="@+id/textViewId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="@string/student_id"
+            android:textColor="@android:color/black"/>
+
+        <TextView
+            android:layout_below="@id/textViewClass"
+            android:layout_toEndOf="@id/textViewId"
+            android:id="@+id/txt_std_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="9dcZCd2p2g9BMVHAlQn7"
+            android:textColor="@android:color/black"/>
+
+       <ImageView
+           android:id="@+id/image_edit"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:src="@drawable/ic_menu"
+           android:layout_alignParentEnd="true"
+           app:tint="@color/black"
+           android:layout_centerVertical="true"
+           android:contentDescription="@string/menu_icon" />
+
+
+    </RelativeLayout>
+
+
+
+</androidx.cardview.widget.CardView>
