--- a/app/src/main/res/menu/admin_top_menu.xml
+++ b/app/src/main/res/menu/admin_top_menu.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/settings_menu"
-        android:icon="@drawable/ic_settings"
-        android:title="Settings"
+        android:id="@+id/sign_out_menu"
+        android:icon="@drawable/log_out"
+        android:title="Sign out"
         />
 
 
