--- a/app/src/main/res/layout/activity_student_dashboard.xml
+++ b/app/src/main/res/layout/activity_student_dashboard.xml
@@ -27,9 +27,13 @@
                 app:titleCentered="true"
                 app:titleTextColor="@color/white" />
 
+
         </com.google.android.material.appbar.AppBarLayout>
 
+
+
         <LinearLayout
+            android:id="@+id/printContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/topBar"
@@ -38,6 +42,14 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/student_profile"
+                android:src="@drawable/ic_student"
+                android:layout_below="@id/topBar"
+                android:layout_gravity="center_horizontal"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -76,70 +88,92 @@
                     android:layout_margin="10dp" />
             </LinearLayout>
 
-            <ScrollView
+            <!-- Shimmer layout wrapping the content to be shimmered -->
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_view_container"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:shimmer_auto_start="true"
+                app:shimmer_duration="1000">
 
-                <TableLayout
-                    android:id="@+id/table_layout"
-                    style="@style/Widget.Material3.TabLayout.Secondary"
+                <ScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:nestedScrollingEnabled="true"
-                    android:padding="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/topBar">
+                    android:layout_height="match_parent">
 
-                    <!-- Table header row -->
-                    <TableRow
+                    <TableLayout
+                        android:id="@+id/table_layout"
+                        style="@style/Widget.Material3.TabLayout.Secondary"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:nestedScrollingEnabled="true"
+                        android:padding="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/topBar">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="8dp"
-                            android:text="Subject"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textStyle="bold" />
+                        <!-- Table header row -->
+                        <TableRow
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="8dp"
-                            android:text="Beg"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="8dp"
+                                android:text="Subject"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textStyle="bold" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="8dp"
-                            android:text="Mid"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="8dp"
+                                android:text="Beg"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textStyle="bold" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="8dp"
-                            android:text="End"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="8dp"
+                                android:text="Mid"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textStyle="bold" />
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="8dp"
-                            android:text="Grade"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
-                            android:textStyle="bold" />
-                    </TableRow>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="8dp"
+                                android:text="End"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textStyle="bold" />
 
-                    <!-- Table rows will be dynamically added here -->
-                </TableLayout>
-            </ScrollView>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:padding="8dp"
+                                android:text="Grade"
+                                android:textAppearance="?android:attr/textAppearanceMedium"
+                                android:textStyle="bold" />
+                        </TableRow>
 
+                        <!-- Table rows will be dynamically added here -->
+                    </TableLayout>
+                </ScrollView>
+
+
+
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/you_have_no_results_at_the_moment"
+                android:textSize="15sp"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="20dp"
+                android:id="@+id/txt_no_results"
+                android:textColor="@color/colorPrimary"
+                />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -159,7 +193,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="loading..."
+                    android:text="N/A"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -183,21 +217,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="loading..."
+                    android:text="N/A"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <com.facebook.shimmer.ShimmerFrameLayout
-                android:id="@+id/shimmer_view_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:shimmer_auto_start="true"
-                app:shimmer_duration="1000" />
-
         </LinearLayout>
 
-
-
+        <!-- Add print button here -->
+        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/btnPrint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Print"
+            app:icon="@drawable/print"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="100dp"
+            android:layout_alignParentBottom="true"
+            />
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
