--- a/app/src/main/res/menu/student_top_menu.xml
+++ b/app/src/main/res/menu/student_top_menu.xml
@@ -1,10 +1,4 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/settings_menu"
-        android:icon="@drawable/ic_settings"
-        android:title="Settings"
-        />
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/sign_out"
